samples/_failures_safe/1761092612_651020_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76b7b5c1.c: In function ‘parse_primary’:
./samples/SAFE/__tmp_76b7b5c1.c:169:9: error: expected expression at end of input
  169 |         node->value[63] =
      |         ^~~~
./samples/SAFE/__tmp_76b7b5c1.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76b7b5c1.c:169:9: error: expected declaration or statement at end of input
